<?xml version="1.0"?>
<package format="2">
  <name>diff_drive</name>
  <version>0.0.1</version>
  <description>A differential-drive robot that can be simulated in Gazebo and controlled by ROS</description>

  <maintainer email="yael.bshalom@gmail.com">yael Ben Shalom</maintainer>
  <author email="yael.bshalom@gmail.com">yael Ben Shalom</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>GPLv3</license>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

</package>
